--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
         server: ftp.ramsendang.com.np
-        username: ncodpzoy
+        username: ramsendang@ramsendang.com.np
         password: ${{ secrets.ftp_password }}
