--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
         server: ftp.ramsendang.com.np
-        username: ramsendang@ramsendang.com.np
+        username: admin@ramsendang.com.np
         password: ${{ secrets.ftp_password }}
         server-dir: /public_html/
